# socket

./: CMakeLists.txt  CWebSocket.cpp  README.txt  receiveData.js
WoodenMan/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  WoodenMan.CSharp.Editor.csproj  WoodenMan.CSharp.csproj  WoodenMan.sln
WoodenMan/Assets/: CheckerboardScene.unity
WoodenMan/Assets/Mannequin_Doll/Materials/Unity5/: wood_Texture.mat
WoodenMan/Assets/Mannequin_Doll/Models/Unity5/Materials/: wood_Texture.mat
WoodenMan/Assets/Materials/: Checkerboard.mat
WoodenMan/Assets/Scripts/: WebSocketClient.cs  loadKFWSkeleton.cs  runLive.cs  runLiveKFW.cs  runLiveVNect.cs
WoodenMan/ProjectSettings/: ProjectSettings.asset
WoodenMan_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  output_log.txt  resources.assets  resources.assets.resS  sharedassets0.assets  sharedassets0.assets.resS
mongoose/: README_Easel.txt
